k8s/capstone-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: capstone-web
          image: razaqofficial/capstone
          imagePullPolicy: "Always"
          ports:
            - containerPort: 4001
