k8s/capstone-service.yml
apiVersion: v1
kind: Service
metadata:
  name: capstone-service
  labels:
    component: app
spec:
  selector:
    component: app
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
